--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -31,7 +31,15 @@
                 <td>@item.Nombre</td>
                 <td>@item.Descripcion</td>
                 <td>@item.cantidad</td>
-                <td></td>
+                <td>
+
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                        <button type="button" class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
+                        <button type="button" class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-info"><i class="bi bi-eye-fill"></i></button>
+                    </div>
+
+                </td>
             </tr>
      
     }
