--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -34,9 +34,9 @@
                 <td>
 
                     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-danger"><i class="bi bi-trash-fill"></i></button>
-                        <button type="button" class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
-                        <button type="button" class="btn btn-info"><i class="bi bi-eye-fill"></i></button>
+                        <a asp-action="Delete" asp-route-IdProducto="@item.IdProducto" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+                        <a asp-action="Edit" asp-route-IdProducto="@item.IdProducto" class="btn btn-warning"><i class="bi bi-pencil-square"></i></a>
+                        <a asp-action="Details" asp-route-IdProducto="@item.IdProducto" class="btn btn-info"><i class="bi bi-eye-fill"></i></a>
                     </div>
 
                 </td>
