--- a/Views/Producto/Details.cshtml
+++ b/Views/Producto/Details.cshtml
@@ -5,18 +5,28 @@
 <h1>@ViewData["Title"]</h1>
 
 <form method="post">
-    <div class="mb-3">
-        <label>Nombre</label>
-        <input asp-for="Nombre" class="form-control" disabled>
+    <div class="row">
+        <div class="col-2">
+            <img src="@Model.urlImage" height="250" width="185"
+                 style="border-radius: 5px; border: 1px solid #bbb9b9; "/>
+        </div>
+        <div class="col-10">
+            <div class="mb-3">
+                <label>Nombre</label>
+                <input asp-for="Nombre" class="form-control" disabled>
+            </div>
+            <div class="mb-3">
+                <label>Descripción</label>
+                <input asp-for="Descripcion" class="form-control" disabled>
+            </div>
+            <div class="mb-3">
+                <label>Cantidad</label>
+                <input asp-for="cantidad" class="form-control" disabled>
+            </div>
+         
+        </div>
     </div>
-    <div class="mb-3">
-        <label>Descripción</label>
-        <input asp-for="Descripcion" class="form-control" disabled>
-    </div>
-    <div class="mb-3">
-        <label>Cantidad</label>
-        <input asp-for="cantidad" class="form-control" disabled>
-    </div>
+ 
 
     <div class="row col-6">
        
